[tool.poetry]
name = "cardano-vesting"
version = "0.1.0"
description = "A full stack vesting dApp built on Cardano"
authors = ["Jerry <jerrycgh@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
pycardano = "0.7.0"
isort = "^5.10.1"
black = "^22.8.0"
Flask = "^2.2.2"
cachetools = "^5.2.0"
flask-cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"