Cabal-Version:      2.4
Name:               cardano-vesting-contract
Version:            0.1.0.0
Author:             Jerry
Maintainer:         jerrycgh@gmail.com
Build-Type:         Simple
License:             Apache-2.0
License-files:       LICENSE


executable vesting
 hs-source-dirs:      src
 main-is:             Vesting.hs

 build-depends:       aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , containers
                     , cardano-api
                     , data-default
                     , freer-extras
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-script-utils
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
                     , serialise

 default-language:    Haskell2010
 ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
